post_detail - fix space error for likes and comments on small screens remove justify-content-start

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -635,6 +635,10 @@ h3 {
 
 @media (max-width: 767.98px) {
 
+    .contain-likes {
+        padding-left: 0;
+    }
+
     .navbar-container-home {
         position: relative;
     }
